# seminar

./: .gitignore  README.md
client/: AuthClient.cpp  AuthClient.h  CMakeLists.txt  Exceptions.cpp  Exceptions.h  Payloads.cpp  Payloads.h  SecureClient.cpp  SecureClient.h  Tests.cpp  Tests.h  main.cpp
client/payloads/: restrict_cpu_usage.py  restrict_file_io.py  restrict_network_io.py  unbuffered_io.py
server/: main.py  profile.sb  server.pem  settings.py
